--- a/css/styles.css
+++ b/css/styles.css
@@ -14,11 +14,10 @@ h6 {
     margin: 0;
 }
 
-ul {
-    list-style-type: none;
-    margin: 0;
-    margin-bottom: 0;
+ul, ol {
+    list-style: none;
     padding-left: 0;
+    margin: 0;
 }
 
 a {
@@ -26,19 +25,28 @@ a {
 }
 
 .container {
-    width: 100%;
-    max-width: 1158px;
-    padding-left: 15px;
-    padding-right: 15px;
+    width: 1158px;
+    padding: 0 15px;
     margin: 0 auto;
 }
+
 
 /*====================*/
 
 /*==========HEADER==========*/
 
 .header {
+    border-bottom: 1px solid #E7E9FC;
+}
 
+.header-container {
+    display: flex;
+    align-items: center;
+}
+
+.navigation {
+    display: flex;
+    align-items: center;
 }
 
 .header-menu-logo {
@@ -49,10 +57,16 @@ a {
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    margin-right: 76px;
 }
 
 .logo-parts {
     color: #2E2F42;
+}
+
+.header-menu-list {
+    display: flex;
+    gap: 40px;
 }
 
 .header-menu-link {
@@ -61,6 +75,8 @@ a {
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    padding: 24px 0;
+    display: block;
 }
 
 .header-menu-link:hover,
@@ -70,6 +86,12 @@ a {
 
 .header-address {
     font-style: normal;
+    margin-left: auto;
+}
+
+.header-address-list {
+    display: flex;
+    gap: 40px;
 }
 
 .header-address-link {
