--- a/css/styles.css
+++ b/css/styles.css
@@ -14,8 +14,9 @@ h6 {
     margin: 0;
 }
 
-ul, ol {
-    list-style: none;
+ul,
+ol {
+    list-style-type: none;
     padding-left: 0;
     margin: 0;
 }
@@ -25,11 +26,16 @@ a {
 }
 
 .container {
-    width: 1158px;
+    width: 100%;
+    max-width: 1158px;
     padding: 0 15px;
     margin: 0 auto;
 }
 
+.section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
 
 /*====================*/
 
@@ -37,6 +43,8 @@ a {
 
 .header {
     border-bottom: 1px solid #E7E9FC;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 
 .header-container {
@@ -111,7 +119,13 @@ a {
 /*==========EFFECTIVE==========*/
 
 .effective {
+    padding-top: 96px;
+    padding-bottom: 96px;
+}
+
+.effective-container {
     background-color: #2E2F42;
+    padding: 188px 472px 292px 472px;
 }
 
 .effective-title {
@@ -120,6 +134,8 @@ a {
     font-size: 56px;
     line-height: 1.07;
     letter-spacing: 0.02em;
+    width: 496px;
+    margin-bottom: 48px;
 }
 
 .effective-btn {
@@ -144,6 +160,13 @@ a {
 
 .business {
     background-color: #FFF;
+    padding-top: 96px;
+    padding-bottom: 96px;
+}
+
+.business-list {
+    display: flex;
+    gap: 24px;
 }
 
 .business-subtitle {
@@ -152,6 +175,7 @@ a {
     font-weight: 500;
     line-height: 1.20;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
 }
 
 .business-subtitle-text {
@@ -165,7 +189,7 @@ a {
 
 /*==========TEAM==========*/
 
-.team {
+.team-container {
     background-color: #F4F4FD;
 }
 
@@ -177,6 +201,13 @@ a {
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-transform: capitalize;
+    padding-top: 120px;
+    padding-bottom: 172px;
+}
+
+.team-list {
+    display: flex;
+    margin: 24px;
 }
 
 .team-item {
@@ -185,11 +216,11 @@ a {
 
 .team-subtitle {
     color: #2E2F42;
-text-align: center;
-font-size: 20px;
-font-weight: 500;
-line-height: 1.20;
-letter-spacing: 0.02em;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.20;
+    letter-spacing: 0.02em;
 }
 
 .team-subtitle-text {
@@ -206,6 +237,17 @@ letter-spacing: 0.02em;
 
 .portfolio {
     background-color: #FFF;
+}
+
+.portfolio-title {
+    color: #2E2F42;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
 }
 
 .portfolio-subtitle {
