--- a/css/styles.css
+++ b/css/styles.css
@@ -125,7 +125,10 @@ a {
 
 .effective-container {
     background-color: #2E2F42;
-    padding: 188px 472px 292px 472px;
+    padding-top: 188px;
+    margin-bottom: 48px;
+    text-align: center;
+    display: block;
 }
 
 .effective-title {
@@ -134,8 +137,8 @@ a {
     font-size: 56px;
     line-height: 1.07;
     letter-spacing: 0.02em;
-    width: 496px;
-    margin-bottom: 48px;
+    max-width: 496px;
+    margin: 0 auto;
 }
 
 .effective-btn {
@@ -147,6 +150,7 @@ a {
     line-height: 1.5;
     letter-spacing: 0.04em;
     cursor: pointer;
+    border-radius: 4px;
 }
 
 .effective-btn:hover,
