--- a/css/styles.css
+++ b/css/styles.css
@@ -125,10 +125,10 @@ a {
 
 .effective-container {
     background-color: #2E2F42;
-    padding-top: 188px;
-    margin-bottom: 48px;
-    text-align: center;
-    display: block;
+    padding: 188px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .effective-title {
@@ -138,19 +138,22 @@ a {
     line-height: 1.07;
     letter-spacing: 0.02em;
     max-width: 496px;
-    margin: 0 auto;
+    margin-bottom: 48px;
 }
 
 .effective-btn {
     color: #FFF;
     background-color: #4D5AE5;
+    text-align: center;
     font-family: inherit;
     font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.04em;
     cursor: pointer;
+    border: none;
     border-radius: 4px;
+    padding: 16px 32px;
 }
 
 .effective-btn:hover,
