--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,17 @@ a {
     text-decoration: none;
 }
 
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+  }
+
 .container {
     width: 100%;
     max-width: 1158px;
@@ -151,6 +162,7 @@ a {
     line-height: 1.5;
     letter-spacing: 0.04em;
     cursor: pointer;
+    min-width: 169px;
     border: none;
     border-radius: 4px;
     padding: 16px 32px;
