--- a/css/styles.css
+++ b/css/styles.css
@@ -137,8 +137,7 @@ a {
 /*==========EFFECTIVE==========*/
 
 .effective {
-    padding-top: 96px;
-    padding-bottom: 96px;
+    padding: 188px 0;
 }
 
 .effective-container {
