--- a/css/styles.css
+++ b/css/styles.css
@@ -217,6 +217,10 @@ a {
 
 /*==========TEAM==========*/
 
+.team {
+    padding: 120px 0;
+}
+
 .team-container {
     background-color: #F4F4FD;
 }
@@ -241,6 +245,7 @@ a {
 
 .team-item {
     background-color: #FFFFFF;
+    border-radius: 0px 0px 4px 4px;
 }
 
 .team-subtitle {
