--- a/css/styles.css
+++ b/css/styles.css
@@ -246,6 +246,7 @@ a {
 .team-item {
     background-color: #FFFFFF;
     border-radius: 0px 0px 4px 4px;
+    padding: 32px 0;
 }
 
 .team-subtitle {
@@ -272,6 +273,7 @@ a {
 
 .portfolio {
     background-color: #FFF;
+    padding-top: 120px;
 }
 
 .portfolio-title {
@@ -288,6 +290,8 @@ a {
 .portfolio-list {
     display: flex;
     flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
 }
 
 .portfolio-subtitle {
@@ -296,6 +300,7 @@ a {
     font-weight: 500;
     line-height: 1.20;
     letter-spacing: 0.02em;
+    margin-bottom: 72px;
 }
 
 .portfolio-subtitle-text {
