--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,11 @@ a {
     text-decoration: none;
 }
 
+img {
+    display: block;
+    max-width: 100%;
+}
+
 .visually-hidden {
     position: absolute;
     width: 1px;
@@ -38,10 +43,6 @@ a {
     clip: rect(0 0 0 0);
     overflow: hidden;
   }
-
-.img {
-    display: block;
-}
 
 .container {
     width: 100%;
@@ -316,6 +317,7 @@ a {
 
 .footer {
     background-color: #2E2F42;
+    padding: 100px 0;
 }
 
 .footer-logo {
@@ -326,6 +328,8 @@ a {
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    display: inline-block;
+    margin-bottom: 16px;
 }
 
 .footer-logo-parts {
