--- a/css/styles.css
+++ b/css/styles.css
@@ -316,8 +316,11 @@ img {
 /*==========FOOTER==========*/
 
 .footer {
-    background-color: #2E2F42;
     padding: 100px 0;
+}
+
+.footer-container {
+    background-color: #2E2F42;
 }
 
 .footer-logo {
