--- a/css/styles.css
+++ b/css/styles.css
@@ -250,6 +250,10 @@ img {
     padding: 32px 0;
 }
 
+.team-content {
+    padding: 32px 0;
+}
+
 .team-subtitle {
     color: #2E2F42;
     text-align: center;
@@ -258,6 +262,7 @@ img {
     line-height: 1.20;
     letter-spacing: 0.02em;
     padding-top: 32px;
+    margin-bottom: 8px;
 }
 
 .team-subtitle-text {
