--- a/css/styles.css
+++ b/css/styles.css
@@ -292,6 +292,7 @@ img {
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-transform: capitalize;
+    margin-bottom: 72px;
 }
 
 .portfolio-list {
