--- a/css/styles.css
+++ b/css/styles.css
@@ -302,13 +302,18 @@ img {
     row-gap: 48px;
 }
 
+.portfolio-content {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+}
+
 .portfolio-subtitle {
     color: #2E2F42;
     font-size: 20px;
     font-weight: 500;
     line-height: 1.20;
     letter-spacing: 0.02em;
-    margin-bottom: 72px;
+    margin-bottom: 8px;
 }
 
 .portfolio-subtitle-text {
