--- a/css/styles.css
+++ b/css/styles.css
@@ -62,8 +62,6 @@ img {
 
 .header {
     border-bottom: 1px solid #E7E9FC;
-    padding-top: 24px;
-    padding-bottom: 24px;
 }
 
 .header-container {
@@ -138,15 +136,8 @@ img {
 /*==========EFFECTIVE==========*/
 
 .effective {
-    padding: 188px 0;
-}
-
-.effective-container {
     background-color: #2E2F42;
     padding: 188px 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 .effective-title {
@@ -157,6 +148,8 @@ img {
     letter-spacing: 0.02em;
     max-width: 496px;
     margin-bottom: 48px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .effective-btn {
@@ -173,6 +166,8 @@ img {
     border: none;
     border-radius: 4px;
     padding: 16px 32px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .effective-btn:hover,
@@ -219,11 +214,8 @@ img {
 /*==========TEAM==========*/
 
 .team {
-    padding: 120px 0;
-}
-
-.team-container {
     background-color: #F4F4FD;
+    padding: 120px 0;
 }
 
 .team-title {
@@ -234,7 +226,6 @@ img {
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-transform: capitalize;
-    padding-top: 120px;
     margin-bottom: 72px;
 }
 
@@ -247,7 +238,6 @@ img {
 .team-item {
     background-color: #FFFFFF;
     border-radius: 0px 0px 4px 4px;
-    padding: 32px 0;
 }
 
 .team-content {
@@ -261,7 +251,6 @@ img {
     font-weight: 500;
     line-height: 1.20;
     letter-spacing: 0.02em;
-    padding-top: 32px;
     margin-bottom: 8px;
 }
 
@@ -329,11 +318,8 @@ img {
 /*==========FOOTER==========*/
 
 .footer {
-    padding: 100px 0;
-}
-
-.footer-container {
     background-color: #2E2F42;
+    padding: 100px 0;
 }
 
 .footer-logo {
