--- a/css/styles.css
+++ b/css/styles.css
@@ -162,12 +162,13 @@ img {
     line-height: 1.5;
     letter-spacing: 0.04em;
     cursor: pointer;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     min-width: 169px;
     border: none;
     border-radius: 4px;
     padding: 16px 32px;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .effective-btn:hover,
